[package]
name = "k256-fail"
version = "0.1.0"
edition = "2021"

[dependencies]
der = { version = "0.7.8", default-features = false, features = ["derive", "pem"] }
ecdsa = { version = "0.16.9", default-features = false, features = ["verifying"] }
hex-literal = "0.4.1"
k256 = { version = "=0.13.2", default-features = false, features = ["ecdsa"] }
sha2 = { version = "0.10.8", default-features = false }
signature = { version = "2.2.0", default-features = false, features = ["digest"] }
spki = { version = "0.7.2", default-features = false, features = ["alloc"] }
x509-cert = { version = "0.2.4", default-features = false, features = ["pem"] }
